Add boilerplate HTML and begin page content

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Title</title>
-    <meta name="description" content="A description here" />
-    <meta name="author" content="The author here" />
+    <title>Excursion</title>
+    <meta name="description" content="Excursion" />
+    <meta name="author" content="552020" />
 
-    <link rel="stylesheet" href="style.css" />
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet" />
   </head>
 
   <body>
+    <header>
+      <h1>Discover hidden places in the world around you</h1>
+    </header>
     <!-- <script src="js/scripts.js"></script>-->
   </body>
 </html>
