--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <header>
       <h1>Discover hidden places in the world around you</h1>
     </header>
+    <section id="toplink">
+      <a href="https://053b372d2faa4e69a75aadc0416bf642.cc-propeller.cloud/#"
+        >Download Excursion (Coming soon!)</a
+      >
+    </section>
+    <section id="app"></section>
     <!-- <script src="js/scripts.js"></script>-->
   </body>
 </html>
