--- a/index.html
+++ b/index.html
@@ -15,12 +15,48 @@
     <header>
       <h1>Discover hidden places in the world around you</h1>
     </header>
-    <section id="toplink">
+    <section id="link">
       <a href="https://053b372d2faa4e69a75aadc0416bf642.cc-propeller.cloud/#"
         >Download Excursion (Coming soon!)</a
       >
     </section>
-    <section id="app"></section>
+
+    <section id="video">
+      <video autoplay loop width="250">
+        <source src="resources/video/excursion-video.mp4" type="video/webm" />
+
+        Sorry, your browser doesn't support embedded videos.
+      </video>
+    </section>
+    <section>
+      <h2>Your personal travel guide</h2>
+      <p>
+        Excursion remembers places you like, and recommends new points of
+        interest around you.
+      </p>
+      <img
+        src="resources/image/camp-image.webp"
+        alt="Image of a tent in the mountains"
+        width="1000"
+      />
+    </section>
+    <section id="icon">
+      <img
+        src="resources/image/phone.webp"
+        alt="Icon of a smartphone"
+        width="70"
+      />
+      <h2>Coming soon for iPhone and Android</h2>
+    </section>
+    <section id="link">
+      <a href="https://053b372d2faa4e69a75aadc0416bf642.cc-propeller.cloud/#"
+        >Download Excursion (Coming soon!)</a
+      >
+    </section>
+    <footer id="footer">
+      <p>&#169; Excursion</p>
+    </footer>
+
     <!-- <script src="js/scripts.js"></script>-->
   </body>
 </html>
