small changes after comparisone with the codecademy solution

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   </head>
 
   <body>
+    <!-- Landing section -->
+
     <header>
       <h1>Discover hidden places in the world around you</h1>
     </header>
@@ -23,11 +25,14 @@
 
     <section id="video">
       <video autoplay loop width="250">
-        <source src="resources/video/excursion-video.mp4" type="video/webm" />
+        <source src="resources/video/excursion-video.mp4" type="video/mp4" />
 
         Sorry, your browser doesn't support embedded videos.
       </video>
     </section>
+
+    <!-- Information Section -->
+
     <section>
       <h2>Your personal travel guide</h2>
       <p>
@@ -40,6 +45,9 @@
         width="1000"
       />
     </section>
+
+    <!-- Coming Soon Section -->
+
     <section id="icon">
       <img
         src="resources/image/phone.webp"
@@ -53,6 +61,9 @@
         >Download Excursion (Coming soon!)</a
       >
     </section>
+
+    <!-- Footer -->
+
     <footer id="footer">
       <p>&#169; Excursion</p>
     </footer>
